Fixing contrast ratios - With the icons now being text, color contrast is being checked against them.

--- a/css/_controls.scss
+++ b/css/_controls.scss
@@ -69,7 +69,7 @@ select::-ms-expand {
     }
     &:not(:checked) + label {
       @include icons.material-symbols {
-        color: var(--color-neutral-200);
+        color: var(--color-neutral-300);
       }
     }
     &:focus + label {
